workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__endpoint__test__can_handle_add_path_component__new_events.snap
---
source: workspaces/diff-engine/src/commands/endpoint.rs
expression: new_events
---
[
    PathComponentAdded(
        PathComponentAdded {
            path_id: "path_2",
            parent_path_id: "path_1",
            name: "completed",
            event_context: None,
        },
    ),
]
